# esl_ros_lib

px4_esl_control/: CMakeLists.txt  package.xml
px4_esl_control/launch/: mavros_and_nodes.launch  setup_for_mpc.launch  vel_steps_training.launch
px4_esl_control/src/: auto_offboard.py  logger.py  logger_iris.py  mc_step_input.py  mpc_waypoints.py  offb_node.cpp  optflow_to_vector3.cpp  payload_angle.py  payload_angle_iris.py  pos_control_node.cpp  publish_setpoints.py  run_px4_sitl.py  vector3_to_setpoint.cpp  vel_sp_publisher.py  waypoint_scheduler.py
px4_nav_cmd/scripts/: mc_step_input.py  waypoint_scheduler.py
